# triangles

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: common.h  intersections.h  octo_tree.h  plane.h  segment.h  triangle.h  vector3.h
src/: common.cpp  intersections.cpp  octo_tree.cpp  plane.cpp  segment.cpp  triangle.cpp  vector3.cpp
tests/: intersections_test.cpp  plane_test.cpp  segment_test.cpp  triangle_test.cpp  vector3_test.cpp
